# Table-Differ

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  table-differ.py
examples/: README.txt  create_schema_tabdiff.sql  ex_1_config.yaml  ex_1_create_expected_diff.sql  ex_1_create_initial.sql  ex_1_create_secondary.sql  ex_1_load_expected_diff.sql  ex_1_load_initial.sql  ex_1_load_secondary.sql  grants.sql
examples_sqlite/: ex_1_config.yaml  ex_1_create_expected_diff.sql  ex_1_create_initial.sql  ex_1_create_secondary.sql  ex_1_load_expected_diff.sql  ex_1_load_initial.sql  ex_1_load_secondary.sql
modules/: create_diff_table.py  db_utils.py  get_args.py  get_config.py  reporting.py
modules/tests/: test_table_creation.py
tests/: test_examples.py  test_examples_sqlite.py
